--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -434,8 +434,6 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         dataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
-        cachedDataAttributesLoadingPolicy:
-          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         commandCarryOverPolicy:
           $ref: '#/components/schemas/CommandCarryOverPolicy'
         waitUntilApiTimeoutSeconds: # NOTE: this is the timeout for the single attempt of Cadence/Temporal activity(start to close timeout)
@@ -599,11 +597,7 @@ components:
           type: string
         workflowRunId:
           type: string
-        keys: # return all objects if this and cachedAttributeKeys are empty
-          type: array
-          items:
-            type: string
-        cachedAttributeKeys:
+        keys: # return all objects if this is empty
           type: array
           items:
             type: string
@@ -611,10 +605,6 @@ components:
       type: object
       properties:
         objects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        cachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -816,8 +806,6 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         dataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
-        cachedDataAttributesLoadingPolicy:
-          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         timeoutSeconds:
           type: integer
     WorkflowRpcResponse:
@@ -848,10 +836,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
-        cachedDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
     WorkflowWorkerRpcResponse:
       type: object
       properties:
@@ -864,10 +848,6 @@ components:
           items:
             $ref: '#/components/schemas/SearchAttribute'
         upsertDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        upsertCachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -903,10 +883,6 @@ components:
           items:
             $ref: '#/components/schemas/SearchAttribute'
         dataObjects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        cachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -949,10 +925,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
-        upsertCachedDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
         commandRequest:
           $ref: '#/components/schemas/CommandRequest'
         upsertStateLocals:
@@ -990,10 +962,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
-        CachedDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
         stateLocals :
           type: array
           items:
@@ -1010,10 +978,6 @@ components:
           items:
             $ref: '#/components/schemas/SearchAttribute'
         upsertDataObjects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        upsertCachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
