--- a/iwf.yaml
+++ b/iwf.yaml
@@ -439,8 +439,6 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         dataObjectsLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
-        cachedDataAttributesLoadingPolicy:
-          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         commandCarryOverPolicy:
           $ref: '#/components/schemas/CommandCarryOverPolicy'
         startApiTimeoutSeconds: # NOTE: this is the timeout for the single attempt of Cadence/Temporal activity(start to close timeout)
@@ -629,11 +627,7 @@ components:
           type: string
         workflowRunId:
           type: string
-        keys: # return all objects if this and cachedAttributeKeys are empty
-          type: array
-          items:
-            type: string
-        cachedAttributeKeys:
+        keys: # return all objects if this is empty
           type: array
           items:
             type: string
@@ -641,10 +635,6 @@ components:
       type: object
       properties:
         objects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        cachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -828,6 +818,29 @@ components:
           type: integer
         jsonData:
           type: string # serialized data of service.DumpAllInternalResponse model of iwf repo
+    WorkflowStateStartRequest:
+      type: object
+      required:
+        - context
+        - workflowStateId
+        - workflowType
+      properties:
+        context:
+          $ref: '#/components/schemas/Context'
+        workflowType:
+          type: string
+        workflowStateId:
+          type: string
+        stateInput:
+          $ref: '#/components/schemas/EncodedObject'
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttribute'
+        dataObjects:
+          type: array
+          items:
+            $ref: '#/components/schemas/KeyValue'
     WorkflowSkipTimerRequest:
       type: object
       required:
@@ -874,8 +887,6 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         dataAttributesLoadingPolicy:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
-        cachedDataAttributesLoadingPolicy:
-          $ref: '#/components/schemas/PersistenceLoadingPolicy'
         timeoutSeconds:
           type: integer
     WorkflowRpcResponse:
@@ -906,10 +917,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
-        cachedDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
     WorkflowWorkerRpcResponse:
       type: object
       properties:
@@ -925,10 +932,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
-        upsertCachedDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
         recordEvents:
           type: array
           items:
@@ -941,33 +944,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/InterStateChannelPublishing'
-    WorkflowStateStartRequest:
-      type: object
-      required:
-        - context
-        - workflowStateId
-        - workflowType
-      properties:
-        context:
-          $ref: '#/components/schemas/Context'
-        workflowType:
-          type: string
-        workflowStateId:
-          type: string
-        stateInput:
-          $ref: '#/components/schemas/EncodedObject'
-        searchAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/SearchAttribute'
-        dataObjects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        cachedDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
     WorkflowStateStartResponse:
       type: object
       properties:
@@ -976,10 +952,6 @@ components:
           items:
             $ref: '#/components/schemas/SearchAttribute'
         upsertDataObjects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        upsertCachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
@@ -1020,10 +992,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
-        CachedDataAttributes:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
         stateLocals :
           type: array
           items:
@@ -1040,10 +1008,6 @@ components:
           items:
             $ref: '#/components/schemas/SearchAttribute'
         upsertDataObjects:
-          type: array
-          items:
-            $ref: '#/components/schemas/KeyValue'
-        upsertCachedDataAttributes:
           type: array
           items:
             $ref: '#/components/schemas/KeyValue'
