--- a/iwf.yaml
+++ b/iwf.yaml
@@ -889,6 +889,8 @@ components:
           $ref: '#/components/schemas/PersistenceLoadingPolicy'
         timeoutSeconds:
           type: integer
+        useMemoForDataAttributes:
+          type: boolean
     WorkflowRpcResponse:
       type: object
       properties:
@@ -1199,6 +1201,8 @@ components:
           type: integer
         continueAsNewPageSizeInBytes:
           type: integer
+        useMemoForDataAttributes:
+          type: boolean
     Context:
       type: object
       required:
