--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -601,6 +601,8 @@ components:
           type: array
           items:
             type: string
+        useMemoForDataAttributes:
+          type: boolean
     WorkflowGetDataObjectsResponse:
       type: object
       properties:
