--- a/iwf.yaml
+++ b/iwf.yaml
@@ -651,7 +651,7 @@ components:
           type: string
         workflowRunId:
           type: string
-        keys: # return all search attributes if this is empty
+        keys:
           type: array
           items:
             $ref: '#/components/schemas/SearchAttributeKeyAndType'
@@ -895,6 +895,10 @@ components:
           type: integer
         useMemoForDataAttributes:
           type: boolean
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttributeKeyAndType'
     WorkflowRpcResponse:
       type: object
       properties:
