sync all search attributes to rpc request in iwf-sdk

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -814,6 +814,10 @@ components:
           type: integer
         useMemoForDataAttributes:
           type: boolean
+        searchAttributes:
+          type: array
+          items:
+            $ref: '#/components/schemas/SearchAttributeKeyAndType'
     WorkflowRpcResponse:
       type: object
       properties:
