improve conditional close and add signal channel

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1010,25 +1010,22 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/StateMovement'
-        conditionalClose:
+        conditionalClose: # note that the above nextStates will be used on condition unmet
           $ref: '#/components/schemas/WorkflowConditionalClose'
     WorkflowConditionalClose:
       type: object
       properties:
         conditionalCloseType:
           $ref: '#/components/schemas/WorkflowConditionalCloseType'
-        internalChannelName:
+        channelName:
           type: string
         closeInput:
           $ref: '#/components/schemas/EncodedObject'
-        conditionUnmetDecision:
-          type: array
-          items:
-            $ref: '#/components/schemas/StateMovement'
     WorkflowConditionalCloseType:
       type: string
       enum:
         - FORCE_COMPLETE_ON_EMPTY_INTERNAL_CHANNEL
+        - FORCE_COMPLETE_ON_EMPTY_SIGNAL_CHANNEL
     StateMovement:
       type: object
       required:
