--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -152,6 +152,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '420':
+          description: wait has exceeded timeout
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/workflow/search:
     post:
       summary: "search for workflows by a search attribute query"
@@ -528,6 +534,7 @@ components:
         - WORKFLOW_ALREADY_STARTED_SUB_STATUS
         - WORKFLOW_NOT_EXISTS_SUB_STATUS
         - WORKER_API_ERROR
+        - LONG_POLL_TIME_OUT_SUB_STATUS
     WorkflowStartRequest:
       type: object
       required:
