Add new type in PersistenceLoadingType

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -497,6 +497,7 @@ components:
         - LOAD_ALL_WITHOUT_LOCKING
         - LOAD_PARTIAL_WITHOUT_LOCKING
         - LOAD_PARTIAL_WITH_EXCLUSIVE_LOCK
+        - LOAD_EMPTY
     #            - LOAD_ALL_WITH_EXCLUSIVE_LOCK
     CommandCarryOverPolicy:
       type: object
