Add state options to execute api failure policy

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -469,6 +469,8 @@ components:
           $ref: '#/components/schemas/ExecuteApiFailurePolicy'
         executeApiFailureProceedStateId:
           type: string
+        executeApiFailureProceedStateOptions:
+          $ref: '#/components/schemas/WorkflowStateOptions'
         skipWaitUntil:
           type: boolean
     WorkflowStartOptions:
