--- a/iwf.yaml
+++ b/iwf.yaml
@@ -227,6 +227,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '450':
+          description: RPC acquire locking failure
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/workflow/timer/skip:
     post:
       summary: "skip the timer of a workflow"
@@ -727,6 +733,7 @@ components:
         - CLIENT_API_FAILING_WORKFLOW_ERROR_TYPE
         - STATE_API_FAIL_MAX_OUT_RETRY_ERROR_TYPE
         - INVALID_USER_WORKFLOW_CODE_ERROR_TYPE
+        - RPC_ACQUIRE_LOCK_FAILURE
         - SERVER_INTERNAL_ERROR_TYPE
     WorkflowStatus:
       type: string
