--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -269,6 +269,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+  /api/v1/workflow/waitForStateCompletion:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkflowWaitForStateCompletionRequest'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkflowWaitForStateCompletionResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/workflow/internal/dump:
     post:
       summary: "dump internal info of a workflow"
@@ -1037,6 +1057,21 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/InterStateChannelPublishing'
+    WorkflowWaitForStateCompletionRequest:
+      type: object
+      required:
+        - workflowRunId
+        - stateExecutionId
+      properties:
+        workflowRunId:
+          type: string
+        stateExecutionId:
+          type: string
+    WorkflowWaitForStateCompletionResponse:
+      type: object
+      properties:
+        stateCompletionOutput:
+          $ref: '#/components/schemas/StateCompletionOutput'
     StateDecision:
       type: object
       properties:
