--- a/iwf.yaml
+++ b/iwf.yaml
@@ -300,6 +300,26 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/HealthInfo'
+  /api/v1/workflow/waitForStateCompletion:
+    post:
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/WorkflowWaitForStateCompletionRequest'
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/WorkflowWaitForStateCompletionResponse'
+        '400':
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   # Below APIs are hosted by iWF SDK for iWF server to call
   /api/v1/workflowState/start:
     post:
@@ -1067,6 +1087,21 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/InterStateChannelPublishing'
+    WorkflowWaitForStateCompletionRequest:
+      type: object
+      required:
+        - workflowRunId
+        - stateExecutionId
+      properties:
+        workflowRunId:
+          type: string
+        stateExecutionId:
+          type: string
+    WorkflowWaitForStateCompletionResponse:
+      type: object
+      properties:
+        stateCompletionOutput:
+          $ref: '#/components/schemas/StateCompletionOutput'
     StateDecision:
       type: object
       properties:
