--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1061,11 +1061,11 @@ components:
       type: object
       required:
         - workflowRunId
-        - stateExecutionId
+        - stateId
       properties:
         workflowRunId:
           type: string
-        stateExecutionId:
+        stateId:
           type: string
     WorkflowWaitForStateCompletionResponse:
       type: object
