Revert "use stateId instead of stateExecutionID"
This reverts commit 528507886b2d440fe1a0f0c609685c2b70604325.

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1061,11 +1061,11 @@ components:
       type: object
       required:
         - workflowRunId
-        - stateId
+        - stateExecutionId
       properties:
         workflowRunId:
           type: string
-        stateId:
+        stateExecutionId:
           type: string
     WorkflowWaitForStateCompletionResponse:
       type: object
