--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1091,11 +1091,11 @@ components:
       type: object
       required:
         - workflowRunId
-        - stateId
+        - stateExecutionId
       properties:
         workflowRunId:
           type: string
-        stateId:
+        stateExecutionId:
           type: string
     WorkflowWaitForStateCompletionResponse:
       type: object
