--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -1060,9 +1060,10 @@ components:
     WorkflowWaitForStateCompletionRequest:
       type: object
       required:
-        - workflowRunId
         - stateExecutionId
       properties:
+        workflowId:
+          type: string
         workflowRunId:
           type: string
         stateExecutionId:
