--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1090,9 +1090,10 @@ components:
     WorkflowWaitForStateCompletionRequest:
       type: object
       required:
-        - workflowRunId
         - stateExecutionId
       properties:
+        workflowId:
+          type: string
         workflowRunId:
           type: string
         stateExecutionId:
