--- a/iwf.yaml
+++ b/iwf.yaml
@@ -1090,11 +1090,10 @@ components:
     WorkflowWaitForStateCompletionRequest:
       type: object
       required:
+        - workflowId
         - stateExecutionId
       properties:
         workflowId:
-          type: string
-        workflowRunId:
           type: string
         stateExecutionId:
           type: string
