add timeout response

--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -289,6 +289,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ErrorResponse'
+        '420':
+          description: wait has exceeded timeout
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
   /api/v1/workflow/internal/dump:
     post:
       summary: "dump internal info of a workflow"
