--- a/iwf-sdk.yaml
+++ b/iwf-sdk.yaml
@@ -579,6 +579,10 @@ components:
           type: string
         startStateId:
           type: string
+        completionSignalStateIds:
+          type: array
+          items:
+            type: string
         stateInput:
           $ref: '#/components/schemas/EncodedObject'
         stateOptions:
@@ -1037,8 +1041,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/InterStateChannelPublishing'
-<<<<<<< Updated upstream
-=======
     WorkflowWaitForStateCompletionRequest:
       type: object
       required:
@@ -1056,7 +1058,6 @@ components:
       properties:
         stateCompletionOutput:
           $ref: '#/components/schemas/StateCompletionOutput'
->>>>>>> Stashed changes
     StateDecision:
       type: object
       properties:
