--- a/iwf.yaml
+++ b/iwf.yaml
@@ -609,6 +609,10 @@ components:
           type: string
         startStateId:
           type: string
+        completionSignalStateIds:
+          type: array
+          items:
+            type: string
         stateInput:
           $ref: '#/components/schemas/EncodedObject'
         stateOptions:
@@ -1067,8 +1071,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/InterStateChannelPublishing'
-<<<<<<< Updated upstream
-=======
     WorkflowWaitForStateCompletionRequest:
       type: object
       required:
@@ -1086,7 +1088,6 @@ components:
       properties:
         stateCompletionOutput:
           $ref: '#/components/schemas/StateCompletionOutput'
->>>>>>> Stashed changes
     StateDecision:
       type: object
       properties:
